# StarcraftRemastered

./: .gitignore  CMakeLists.txt  README.md
StarcraftRemastered/: AirUnit.cpp  AirUnit.h  Battlecruiser.cpp  Battlecruiser.h  Common.h  Engine.cpp  Engine.h  Race.h  Source.cpp  Terran.cpp  Terran.h  Texture.cpp  Texture.h  Unit.cpp  Unit.h  vec2.cpp  vec2.h
